fixed all the issue of margin and spacing

--- a/src/components/discover.css
+++ b/src/components/discover.css
@@ -12,7 +12,7 @@
     font-weight: 400;
     color: #666666;
     text-align: center;
-   /* margin-top:0.8rem; */
+   margin-top:0.8rem;
 }
 .Discover-container{
     display: flex
@@ -21,7 +21,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 4rem;
-    margin-bottom:11rem;
+    margin-bottom:9rem;
     gap: 0.5rem;
 }
 .nav{
